Fixed a big typo and added some padding to sections on landing page

--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -66,7 +66,7 @@
     </div>
 </div>
 
-<div class="home-section animate-bg" style="padding-top: 2em; padding-bottom: 1em;">
+<div class="home-section animate-bg" style="padding: 5em 0;">
     <div class="home-about">
         <div class="home-about-section">
             <div class="mini-logo">
@@ -102,8 +102,8 @@
     </div>
 </div>
 
-<div class="home-section animate-bg" style="color: white;">
-    <div class="home-whatsnew">
+<div class="home-section animate-bg" style="padding-top: 5em; color: white;">
+    <div class="home-whatsnew" style="margin-bottom: 10em;">
         <div class="home-whatsnew-title">What's New</div>
 
         <div class="home-whatsnew-version">v1.0</div>
