--- a/gifcache/templates/home/home.html
+++ b/gifcache/templates/home/home.html
@@ -102,7 +102,7 @@
     </div>
 </div>
 
-<div class="home-section animate-bg" style="padding-top: 5em; color: white;">
+<div class="home-section-grey" style="padding-top: 5em;">
     <div class="home-whatsnew" style="margin-bottom: 10em;">
         <div class="home-whatsnew-title">What's New</div>
 
