--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -1991,14 +1991,20 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 .holder span { margin: 0 5px;}
 /* Cache Validator */
 .validation-container {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: -3em;
+	max-height: 50em;
 	min-height: 10em;
-	min-width: 10em;
+	max-width: 30em;
+	overflow-y: auto;
+	color: white;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 .validation-title {
 	margin-top: -.8em;
 	text-align: center;
-	color: white;
 	font-size: 2em;
 }
 .validation-title div {
@@ -2010,7 +2016,6 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 	padding: .25em;
 	width: 100%;
 	min-height: 10em;
-	color: white;
 	text-align: center;
 }
 .validation-results .tag-manager-section {
@@ -2028,6 +2033,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 	position: relative;
 	margin: .75em;
 	padding: .35em;
+	vertical-align: top;
 	max-width: 10em;
 	background-color: #F2F2F2;
 	color: #4d4d4d;
