--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -47,7 +47,7 @@ select:hover {cursor: pointer;}
 }
 .lightbox-title {
 	display: inline-block;
-	position: absolute;	
+	position: absolute;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
@@ -93,7 +93,7 @@ select:hover {cursor: pointer;}
 	right: .5em;
 	padding: .5em;
 	background-color: #333333;
-	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);	
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border-radius: .25em;
 }
 .lightbox-control:hover {
@@ -143,7 +143,6 @@ select:hover {cursor: pointer;}
 .main-form {
 	position: relative;
 	margin: 1em auto;
-	margin-top: 6em;
 	padding: 1em;
 	padding-top: 2em;
 	max-width: 25em;
@@ -209,7 +208,7 @@ select:hover {cursor: pointer;}
 	font-size: .75em;
 	text-shadow: 1px 1px 3px #000;
 }
-.gif-grid-element-delete-label {	
+.gif-grid-element-delete-label {
 	font-size: .65em;
 	text-shadow: none;
 }
@@ -600,7 +599,7 @@ select:hover {cursor: pointer;}
 	text-align: center;
 }
 .home-arrow {
-	margin: 0 auto;
+    margin-top: .5em;
 	width: 1em;
 	font-size: 4em !important;
 }
@@ -644,6 +643,7 @@ select:hover {cursor: pointer;}
 	font-size: 1em;
 }
 .slogan {
+    padding: .25em;
 	text-align: center;
 	font-size: 1.2em;
 }
@@ -666,8 +666,8 @@ select:hover {cursor: pointer;}
 }
 .home-btn {
 	display: inline-block;
-	margin: 1em .75em;
-	width: 5em;
+	margin: .1em .75em;
+	width: 3.5em;
 	line-height: 2em;
 	color: white;
 	font-size: 1.75em;
@@ -686,7 +686,6 @@ select:hover {cursor: pointer;}
 .startup-bs-box {
 	display: inline-block;
 	margin: 1em 3em;
-	height: 20em;
 	max-width: 20em;
 }
 .startup-icon {
@@ -727,8 +726,10 @@ select:hover {cursor: pointer;}
 	font-family: 'PT Sans', sans-serif;
 }
 .home-demo .btn {
-	height: 2.25em;
-	line-height: 2.25em;
+    margin: 0 auto;
+    height: 2.25em;
+    line-height: 2.25em;
+    max-width: 80%;
 }
 .home-about {
 	margin: 0 auto;
@@ -922,7 +923,7 @@ select:hover {cursor: pointer;}
 	position: absolute;
 	z-index: 6;
 	margin: 0 auto;
-	margin-top: 1em;
+	margin-top: .5em;
 	left: 0;
 	right: 0;
 	padding: .5em;
@@ -971,7 +972,7 @@ select:hover {cursor: pointer;}
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	border-radius: .15em;
 }
-.nav-setting-icon {	
+.nav-setting-icon {
 	display: inline-block;
 	position: relative;
 	margin: .25em auto;
@@ -981,7 +982,7 @@ select:hover {cursor: pointer;}
 	width: 1.5em;
 	font-size: .8em;
 	color: white;
-	background-color: #72ADD3;	
+	background-color: #72ADD3;
 	border-radius: .25em;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
@@ -1042,7 +1043,7 @@ select:hover {cursor: pointer;}
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 	color: white;
 }
-.tag-title {	
+.tag-title {
 	position: absolute;
 	padding: .15em .5em;
 	top: -1.1em;
@@ -1516,7 +1517,6 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 /* GifGrabber */
 .gifgrabber-container {
 	z-index: 1;
-	top: 5%;
 	color: white;
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
 }
@@ -1634,11 +1634,11 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 	z-index: 2;
 	top: .15em;
 	right: .25em;
-	padding: .25em;	
+	padding: .25em;
 	border-radius: .25em;
 }
 .grabber-inner-cancel:hover {
-	cursor: pointer;	
+	cursor: pointer;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
 }
 .grabber-inner-cancel div, .grabber-inner-cancel i {
@@ -1737,7 +1737,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 	right: 0.6em;
 	top: -.2em;
 }
-.bulk-selected-gifs-number {	
+.bulk-selected-gifs-number {
 	width: 1.25em;
 	height: 1.25em;
 	line-height: 1.25em;
@@ -1776,7 +1776,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 		display: inline-block;
 	}
 }
-.holder a.jp-current, a.jp-current:hover { 
+.holder a.jp-current, a.jp-current:hover {
 	color: #FF4242;
 	font-weight: bold;
 }
@@ -1790,7 +1790,6 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 /* Cache Validator */
 .validation-container {
 	position: relative;
-	top: 15%;
 	left: 0;
 	right: 0;
 	height: 13em;
@@ -1811,7 +1810,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 .validation-title div {
 	display: inline-block;
 	margin-left: -.2em;
-	font-family: 'Lobster';	
+	font-family: 'Lobster';
 }
 .validation-results {
 	width: 100%;
@@ -1846,7 +1845,7 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 }
 .validation-result:active{
 	top: 4px;
-} 
+}
 .validation-result-inner-wrapper {
 	position: absolute;
 	z-index: 2;
